fix table overflow in safari/chrome - part of FE-106

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -678,7 +678,7 @@ input {
 .visuallyhidden {
   position: absolute;
   z-index: -1;
-  width: 0;
+  width: 1px;
   height: 1px;
   margin: -1px;
   padding: 0;
